--- a/vignettes/MagellanNTK.Rmd
+++ b/vignettes/MagellanNTK.Rmd
@@ -11,8 +11,6 @@ abstract: >
     the succession of process of calculation for datasets.
     It has been developed with genericity in mind so as to handle generic 
     data formats based of `list`.
-    This document covers the functionalities available in 
-    `r BiocStyle::pkg_ver('MagellanNTK')`.
 date: "`r Sys.Date()`"
 output:
     BiocStyle::html_document:
@@ -35,141 +33,148 @@ editor_options:
 
 # Introduction
 
-This package contains the core engine to instantiate a workflow manager
-and provide an infrastructure for the configuration, the execution and
-the surveillance of a defined sequence of tasks.
+The package \`MagellanNTK\` provides the infrastructure for the
+configuration, the execution and the surveillance of a defined sequence
+of tasks. The tasks it uses are structured as Shiny modules. It is very
+flexible in two ways:
 
-The audience of this document is end-users and describes the user
-interface and the functionnality of the core engine. Please note that,
-as a Shiny module, MagellanNTK can be run standalone or embebbed in
-another Shiny module, as it is the case with
+-   It does not content any tasks to run but is only the infrastructure
+    to manage them. Task have to be be inserted from another packages or
+    code. Thus, \`MagellanNTK\` can work with a very large panel of
+    domains. For more details on creating tasks for MagellanNTK, please
+    see xxxx.
 
-In order to have a more complete view of how MagellanNTK works or if you
+As for Shiny module, MagellanNTK can be run standalone or embebbed in
+another Shiny module, as it is the case with the package [Prostar
+2.0](https://github.com/prostarproteomics/Prostar.2.0) for example. In
+order to have a more complete view of how MagellanNTK works or if you
 intent to develop workflows or pipelines for MagellanNTK, it is advised
 to see the xxx.
 
 Generally, end users will not have to know much about `MagellanNTK`
 other than the use of UI. This is the topic of this vignette. This is
-why there is no installation nor technical section in his document. For
-technical details, please refer to the vignette 'Configure MagellanNTK'
+why there is no installation nor technical section in his document.
 
-The graphical elements are mainly navigation elements which permit to
-navigate between steps of a process or processes of a pipeline.
+To go further in technical details, please refer to:
+
+-   'Configure MagellanNTK'
+
+-   Build a pipeline module
+
+-   Create a new pipeline tutorial
+
+-   Create complex workflow
+
+-   Inside MagellanNTK
+
+This document starts with a general overview of workflows and their
+principles. Then , it focuses ont the User Interface of
+\``MagellanNTK`\`.
 
 # Workflow overview
 
 As a workflow manager, the aim of `MagellanNTK` is to execute a series
-of ordered tasks over a dataset.
+of ordered tasks over a dataset (see Fig \@ref(fig:WFprinciple)). The
+workflow, instantiated by MagellanNTK, has two communication channels
+(input and output). An input dataset is passed to the engine which
+returns a new dataset (i.e. a dataset in which the result of tasks as
+been added).
 
-At high level, it can be view as a black box with two communication
-channels (input and output). A dataset is passed to the engine which
-performs actions on it and return a new dataset. The role of
-MagellantNTK is to organize and adapt the succession of actions that
-will be performed on the dataset. For example, some steps can be
-skipped, other are mandatory and cannot be skipped...
-
-```{r 'WF_principle', results='markup', fig.cap="UI process", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
+```{r 'WFprinciple', results='markup', fig.cap="A process: task organizer", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
 knitr::include_graphics("./figs/WF_principle.png", error = FALSE)
 ```
 
 ## Single task
 
-As said, a workflow is a series of actions (steps)
+In MagellanNTK, a task (or step) is defined as a data analysis process
+that performs a minimal and consistent set of operations on a dataset.
+Note that the dataset is not obligatory modified, for example in case of
+a visualization task. Each task has its own user interface, based on
+Shiny modules. These interfaces may contain different elements to
+interact with the user (widgets to define parameters values, plots,
+etc).
 
-In MagellanNTK, a task (or step) is defined as a data processing program
-that performs a minimal and consistent set of basic operations on a
-dataset. It cannot be divided into subtasks.
-
-A basic workflow execute all the tasks in their predefined order. But,
-even if the global direction is always one-way, it can be interesting to
-introduce some rules to customize the effective execution of the set of
-tasks. Fro example, a given task may be facultative (eventually under
-some condition) while another one will be mandatory. The implementation
-of such possibilities is made by mean of properties on tasks.
-
-To this end, task are tagged with a few properties. Two tags determine
-the state of a task:
-
-| Tag     | Values       | Description                                                                                                 |
-|------------------|--------------------|----------------------------------|
-| Done    | true / false | Indicates whether a task has been executed                                                                  |
-| Skipped | true / false | Indicates whether a task has been skipped (i.e. there is at least one task further that has been validated) |
-
-One property refines the possibilities of a task:
+In a workflow, the sequence of tasks is always one-way: it begins at the
+first task and ends up at the last one. So, the simplest workflow is the
+one where each task is executed after its previous one, from the first
+one to the last one. However, it may be interesting to introduce some
+additional rules to customize the sequence of tasks. Fro example, a
+given task may be facultative (eventually under some condition) while
+another one will be mandatory. The implementation of such possibilities
+is made by mean of properties on tasks. Actually, one property refines
+the possibilities of a task:
 
 | Name      | Values       | Description                                                                   |
-|---------------|---------------|------------------------------------------|
-| Mandatory | true / false | Indicates whether a task must be executed to be able to pursuie the workflow. |
+|---------------|---------------|-------------------------------------------|
+| Mandatory | true / false | Indicates whether a task must be executed to be able to pursiue the workflow. |
 
-In real life, tasks are identified by a combination of tags and
-properties. Different styles are used to identify them
+: In order to decide what to do for the next task, MagellanNTK uses tags
+on tasks to determine their state during the workflow:
 
-The table below describes the different styles and their meaning
+| Tag     | Values       | Description                                                                                                                         |
+|-----------|------------|-----------------------------------------------|
+| Done    | true / false | Indicates whether a task has been executed                                                                                          |
+| Skipped | true / false | Indicates whether a task has been skipped (i.e. it is not validated and there is at least one task further that has been validated) |
+| Enabled | true / false | Indicates whether the UI of the task can be modified.                                                                               |
 
-|                  Bullet                  |   Property    |  State   | Done/Undone |
-|:-------------------------:|:-------------:|:-------------:|:-------------:|
-| ![](figs/bullet_empty_red_disabled.png)  |    Skipped    | Disabled |   Undone    |
-| ![](figs/bullet_empty_red_disabled.png)  |   Mandatory   | Disabled |   Undone    |
-|  ![](figs/bullet_empty_red_enabled.png)  |   Mandatory   | Enabled  |   Undone    |
-| ![](figs/bullet_full_green_disabled.png) |      \-       | Disabled |    Done     |
-| ![](figs/bullet_empty_red_disabled.png)  | Not mandatory |          |   Undone    |
+Concretely, tasks are identified by a combination of tags and
+properties. Different styles are used to identify them in the user
+interface (See Tab xxx)
 
-However, the first and the last steps of a process (respectively called
-'Description' and 'Save') are always mandatory and are added by
-\`MagellanNTK \* *skipped*. A step can be facultative and may be skipped
-without any consequences on the execution of the other steps.
-
-MagellanNTK associates a UI (as a Shiny module) to each task. For a view
-of styles used to the bullets w.r.t the state of the step, please refer
-to Annex 1
+|                              Bullet                              |   Property    |  State   | Done/Undone |
+|:-------:|:-----------:|:---------:|:------------:|
+| ![](figs/bullet_empty_red_disabled.png){width="15" height="15"}  |    Skipped    | Disabled |   Undone    |
+| ![](figs/bullet_empty_red_disabled.png){width="15" height="15"}  |   Mandatory   | Disabled |   Undone    |
+|        ![](figs/bullet_empty_red_enabled.png){width="15"}        |   Mandatory   | Enabled  |   Undone    |
+| ![](figs/bullet_full_green_disabled.png){width="15" height="15"} |      \-       | Disabled |    Done     |
+| ![](figs/bullet_empty_red_disabled.png){width="15" height="15"}  | Not mandatory |          |   Undone    |
 
 ## Process
 
-The series of steps (actions) executed on a dataset in a predefined
-order is called a process. The set of steps is consistent with a more
-complex computation than the singles steps.
-
-With `MagellanNTK`, two mandatory. steps are automatically added:
-'Description' and 'Save'. In addition, a process have at least one step
-and can have as many as needed.
-
-A *(processing) step* is the minimal thing that operates a data program
-on a dataset. It is built with a UI which can contains widgets (to
-define parameters values), plots, etc. In short, a step cannot be
-divided into multiple steps. Concretely, a process is implemented as a
-Shiny module. For more details on how to build a process module, see
-xxx.
+In MagellanNTK, a process if defined as a sequence of tasks. Thus, it is
+a more complex workflow than a single task (which is a workflow with
+only one task). Processes are implemented as Shiny modules which contain
+the user interface, the plots, the data analysis functions. This code is
+not the purpose of MagellanNTK. For more details on how to build a
+process module, see xxx.
 
 ```{r 'processOverview', results='markup', fig.cap="Process overview", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
 knitr::include_graphics("./figs/process.png", error = FALSE)
 ```
 
-Any process transforms its input dataset to produce a new dataset at
-output. In terms of structure, that means that the object given as input
-has *n* items (datasets) and has *n+1* items (datasets) at the end of
-the process. Thus, at any time, the object keeps the entire history of
-what happened to datasets.
+Any process takes a dataset as input and returns a dataset as output.
+The output dataset may be:
+
+-   identical to the input dataset in the process do not modify it
+    (vizualization functions for example),
+
+-   different if the program modifies the data. In this case,
+    MagellanNTK adds the modify dataset to the list of datasets rather
+    than just updating the dataset. It means that if the list input has
+    *n* datasets then the list at output will have *n+1* datasets .
+    Thus, at any time, the list of datasets keeps the entire history of
+    what happened to datasets.
 
 ## Pipeline
 
 The engine's architecture in `MagellanNTK` is implemented in a recursive
-way. Thus, it can be seen as a hierarchical tree where each nodes and
-leaves correspond respectively to processes and steps.
+way. A process has been defnied as a sequence of tasks. Here, one
+defines a pipeline as a sequence of processes. Thus, if one remark that
+a process can be view as a (complex) task, then a pipeline is also a
+workflow. Thus, the manner of pipeline works will be very similar to a
+process behaviour:
 
-A pipeline is defined as a process but in which each step is an entire
-process, not a single step. As it, it is composed of a series of steps
-but here, each step is a process (as defined above). `MagellanNTK` is a
-recursive engine and can manage several levels of processes
+-   each process (complex tasks) in a pipeline has tags and properties
+    (See xxx)
+
+-   there is a list of datasets in input and get a list of datasets at
+    output
 
 As shown in xxx, a pipeline is at third level of such a structure.
 
 ```{r 'hierarchyWorkflow', results='markup', fig.cap="Process overview", echo=FALSE, out.width='100%', fig.align='center', fig.wide = TRUE}
 knitr::include_graphics("./figs/pipeline.png", error = FALSE)
 ```
-
-As a pipeline is also a workflow, one have globally the same behaviour
-for the dataset. Thus, the object at the output of a pipeline has on
-more dataset than the dataset passed at the input.
 
 ## Data formats
 
